[tool.poetry]
name = "hexlet-code"
version = "0.1.5"
description = ""
authors = ["Aleksey Ivanov <aleksey.vl.ivanov@gmail.com>"]
packages = [{ include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
rope = "^0.22.0"
cohesion = "^1.0.0"
dlint = "^0.12.0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.5.1"
flake8-coding = "^1.3.2"
flake8-class-attributes-order = "^0.1.2"
flake8-builtins = "^1.5.3"
flake8-mutable = "^1.2.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
